hphp/test/slow/array_access/fatal_access/new_elem.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot use a scalar value as an array' in %s/new_elem.php:5
Stack trace:
#0 (): main()
#1 {main}
